[OpenNeuro] Recorded changes

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+NOTE: The dataset currently contains the example data for 1 participant only. The full dataset will be uploaded upon publication of the manuscript.
+
 The main folder contains the raw EEG data for an example participant in standard bids format. See references.
 
 The ‘derivatives’ folder contains the behavioural data collected during the EEG session ('behavioural' folder) as well as the pre-processed EEG data ('cosmomvpa' folder). 
